@@ -187,7 +187,7 @@
         </dependency>
 
         <dependency>
-            <!-- TODO Should be possible to remove this once UserAttributesInitializer is deprecated and removed -->
+            <!-- Should be possible to remove this once UserAttributesInitializer is deprecated and removed -->
             <groupId>io.telicent.jena</groupId>
             <artifactId>rdf-abac-core</artifactId>
         </dependency>
@@ -246,7 +246,6 @@
                         <!-- Needed to allow some tests to set Origin header to simulate CORS requests -->
                         <sun.net.http.allowRestrictedHeaders>true</sun.net.http.allowRestrictedHeaders>
                     </systemPropertyVariables>
-                    <argLine>@{argLine} -javaagent:${org.mockito:mockito-core:jar} -XX:+EnableDynamicAgentLoading -Xshare:off</argLine>
                 </configuration>
             </plugin>
             <plugin>
